--- a/xio/core/app/ihm/index.html
+++ b/xio/core/app/ihm/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>Inxio.net</title>
+        <title>xio</title>
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <script language="javascript" src="sdk/bootstrap.js"></script>
+        <link rel="import" href="sdk/tags/resource/">
     </head>
    
     <body>
 
-    xio ready
+    <xio-app>
+
+    </xio-app>
 
     </body>
 </html>
