--- a/xio/www/sdk/tests/index.html
+++ b/xio/www/sdk/tests/index.html
@@ -23,7 +23,7 @@
                 </xio-section>
                 <hr/>data inline
                 <xio-section>
-                    <xio-data>[{"label": "item1"},{"label": "item2"}]</xio-data>
+                    <xio-data name="mydata">[{"label": "item1"},{"label": "item2"}]</xio-data>
                     <xio-code>
                         console.log('------------')
                         console.log(app)
@@ -33,7 +33,7 @@
                 <hr/>data included attribute
                 
                 <xio-section>
-                    <xio-data include="includes/test.json"></xio-data>
+                    <xio-data content="includes/test.json"></xio-data>
                 </xio-section>
 
                 <hr/>data included element
