--- a/xio/core/app/ext/admin/www/index.html
+++ b/xio/core/app/ext/admin/www/index.html
@@ -13,13 +13,13 @@
     <body>
         <xio-app>
 
-            <xio-page id="home">
-                home
-                <xio-resource></xio-resource>
+            <xio-page id="www">
+                www
+                <xio-resource src="/"></xio-resource>
             </xio-page>
 
-            <xio-page id="debug"> 
-                debug
+            <xio-page id="debug" content="/xio/admin/debug"> 
+                
             </xio-page>
 
             <xio-page id="services"> 
