--- a/xio/www/sdk/tests/index.html
+++ b/xio/www/sdk/tests/index.html
@@ -9,6 +9,21 @@
         <script language="javascript" src="/xio/sdk/bootstrap.js"></script>
 
     </head>
+    <script>
+
+    // test js handler
+    app.routes.bind('js/some/path', function(req) {
+        alert('route1 postpath='+req.postpath)
+    })
+    app.routes.bind('js/some/path/:id/:subid', function(req) {
+        console.log(req.data)
+        alert('route2 postpath='+req.context[':id']+' '+req.context[':subid'])
+    })
+    app.routes.bind('js/some/path/:postpath', function(req) {
+        console.log(req.data)
+        alert('route3 postpath='+req.context[':id']+' '+req.context[':subid'])
+    })
+    </script>
    
     <body>
         <xio-app>
@@ -42,11 +57,25 @@
                         <xio-include src="includes/test.json"></xio-include>
                     </xio-data>
                 </xio-section>
+
+                <hr/>inlin data+template
+                <xio-section>
+                    <xio-data>
+                        {"somekey": "test OK"}
+                    </xio-data>
+                    <template>
+                        {{somekey}}
+                    </template>
+                </xio-section>
+
             </xio-page>
 
             <xio-page id="tags"> 
                 <hr/>
                 <xio-button><code>alert('ok')</code></xio-button>
+                <a href="#js/some/path">js/some/path</a> - 
+                <a href="#js/some/path/with/somepath">js/some/path/with/somepath</a>
+                <a href="#js/some/path/with/some/path">js/some/path/with/some/path</a>
                 <hr/>
                 <xio-breadcrumb path="some/path/for/breadcrumb"></xio-breadcrumb>
                 <xio-breadcrumb basehref="#mylink=" path="some/path/for/breadcrumb"></xio-breadcrumb>
