--- a/xio/www/sdk/tests/index.html
+++ b/xio/www/sdk/tests/index.html
@@ -19,9 +19,9 @@
         console.log(req.data)
         alert('route2 postpath='+req.context[':id']+' '+req.context[':subid'])
     })
-    app.routes.bind('js/some/path/:postpath', function(req) {
+    app.routes.bind('js/some/path/*', function(req) {
         console.log(req.data)
-        alert('route3 postpath='+req.context[':id']+' '+req.context[':subid'])
+        alert('route3 postpath='+req.path)
     })
     </script>
    
@@ -73,9 +73,11 @@
             <xio-page id="tags"> 
                 <hr/>
                 <xio-button><code>alert('ok')</code></xio-button>
-                <a href="#js/some/path">js/some/path</a> - 
-                <a href="#js/some/path/with/somepath">js/some/path/with/somepath</a>
-                <a href="#js/some/path/with/some/path">js/some/path/with/some/path</a>
+                <ul>
+                    <li><a href="#js/some/path">js/some/path</a></li> 
+                    <li><a href="#js/some/path/with/somepath">js/some/path/with/somepath</a></li>
+                    <li><a href="#js/some/path/with/some/path">js/some/path/with/some/path</a></li>
+                </ul>
                 <hr/>
                 <xio-breadcrumb path="some/path/for/breadcrumb"></xio-breadcrumb>
                 <xio-breadcrumb basehref="#mylink=" path="some/path/for/breadcrumb"></xio-breadcrumb>
